add files in package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "vuepress-theme"
     ],
     "files": [
-        "index.js"
+        "src/",
+        "example/"
     ],
     "scripts": {
         "release": "release-it"
